# cpp-examples-ipcv

./: CMakeLists.txt  README.md  bg_fg_mog.cpp  bilateral_filter.cpp  butterworth_lowpass.cpp  colourquery.cpp  displayimage.cpp  feature_point_matching.cpp  fourier.cpp  generic_interface.cpp  generic_recognition_interface.cpp  generic_selection_interface.cpp  harris.cpp  histogram_based_recognition.cpp  histogram_based_recognition_colour.cpp  liveimage.cpp  livevideo.cpp  mean_filter.cpp  meanshift_segmentation.cpp  nlm.cpp  nlm2.cpp  opencv_c_from_cpp.cpp  optical_flow_fback.cpp  polygons.cpp  saveimage.cpp  smoothimage.cpp  writevideo.cpp
